Parte grafica completata e qualche aggiustamento al codice